k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: exchange-rates-service
  name: exchange-rates-service
spec:
  ports:
    - name: http
      port: 5678
      protocol: TCP
      targetPort: 8001
  selector:
    app: exchange-rates
  type: ClusterIP
